# DeepSpeech

./: .cardboardlint.yml  .compute  .dockerignore  .gitattributes  .gitignore  .gitmodules  .install  .isort.cfg  .pylintrc  .readthedocs.yml  .taskcluster.yml  .tc.benchmark-tests.yml  .tc.cpp-ds-tests.yml  .tc.node-tests.yml  .tc.python-tests.yml  .tc.training.yml  .travis.yml  BIBLIOGRAPHY.md  CODE_OWNERS.rst  CONTRIBUTING.rst  DeepSpeech.ipynb  DeepSpeech.py  Dockerfile  Dockerfile.build.tmpl  Dockerfile.train.tmpl  GRAPH_VERSION  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  README.rst  README.website.md  RELEASE.md  RELEASE.rst  RESULTS.de  SUPPORT.rst  TRAINING.rst  USING.rst  VERSION  banglaconversion  (+54 more)
.circleci/: config.yml
.github/: build.yml  lock.yml
DeepSpeech/: __init__.py
benchmarks/: README.md  batch.sh  ctc_titanx_1000_loggpu.txt.xz  ctc_titanx_nepochs300_batch128_1gpu.csv  ctc_titanx_nepochs300_batch512_1gpu.csv  gpu_loss.sh  gpu_valerr.sh  gpus.sh  warpctc_titanx_1000_loggpu.txt.xz  warpctc_titanx_nepochs300_batch128_1gpu.csv  warpctc_titanx_nepochs300_batch512_1gpu.csv
ci_scripts/: aarch64-build.sh  all-utils.sh  all-vars.sh  armv7-build.sh  artifact_cache_index.json  asserts.sh  build-utils.sh  cpp-bytes-ds-tests.sh  cpp-bytes-tests.sh  cpp-ds-tests-prod.sh  cpp-ds-tests.sh  cpp-tests-prod.sh  cpp-tests.sh  cpp_tflite-ds-tests-prod.sh  cpp_tflite-tests-prod.sh  cpp_tflite-tests.sh  cpp_tflite_basic-tests.sh  cppwin-tests.sh  cppwin_tflite-tests.sh  docs-requirements.txt  electronjs-tests-prod.sh  electronjs-tests.sh  electronjs_tflite-tests-prod.sh  electronjs_tflite-tests.sh  host-build.sh  node-tests-prod.sh  node-tests.sh  node_tflite-tests-prod.sh  node_tflite-tests.sh  package-utils.sh  (+9 more)
native_client/java/DeepSpeech-jni/: .gitignore  CMakeLists.txt  README.MD  org_mozilla_deepspeech_DeepSpeech.cpp  org_mozilla_deepspeech_DeepSpeech.h  org_mozilla_deepspeech_cuda_Cuda.cpp  org_mozilla_deepspeech_cuda_Cuda.h  org_mozilla_deepspeech_utils_NativeAccess.cpp  org_mozilla_deepspeech_utils_NativeAccess.h
native_client/java/libdeepspeech_android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
native_client/java/libdeepspeech_android/src/androidTest/java/org/deepspeech/libdeepspeech/test/: BasicTest.java
native_client/java/libdeepspeech_android/src/main/: AndroidManifest.xml
native_client/java/libdeepspeech_android/src/main/java/org/deepspeech/libdeepspeech_doc/: CandidateTranscript.java  Metadata.java
native_client/java/libdeepspeech_android/src/test/java/org/deepspeech/libdeepspeech/: ExampleUnitTest.java
native_client/java/libdeepspeech_jre/: .gitignore  CMakeLists.txt  gradle.properties  settings.gradle
native_client/java/libdeepspeech_jre/docs/: standalone.md
native_client/kenlm/: .gitignore  BUILDING  CMakeLists.txt  Doxyfile  GIT_REVISION  LICENSE  MANIFEST.in  README.md  README.mozilla  clean_query_only.sh  compile_query_only.sh  setup.py
native_client/kenlm/cmake/: KenLMFunctions.cmake
native_client/kenlm/cmake/modules/: FindEigen3.cmake
native_client/kenlm/lm/: CMakeLists.txt  bhiksha.cc  bhiksha.hh  binary_format.cc  binary_format.hh  blank.hh  build_binary_main.cc  config.cc  config.hh  enumerate_vocab.hh  facade.hh  fragment_main.cc  kenlm_benchmark_main.cc  left.hh  left_test.cc  lm_exception.cc  lm_exception.hh  max_order.hh  model.cc  model.hh  model_test.cc  model_type.hh  ngram_query.hh  partial.hh  partial_test.cc  quantize.cc  quantize.hh  query_main.cc  read_arpa.cc  read_arpa.hh  return.hh  search_hashed.cc  search_hashed.hh  search_trie.cc  search_trie.hh  sizes.cc  sizes.hh  state.hh  test.arpa  test_nounk.arpa  (+13 more)
native_client/kenlm/lm/common/: CMakeLists.txt  compare.hh  joint_order.hh  model_buffer.cc  model_buffer.hh  model_buffer_test.cc  ngram.hh  ngram_stream.hh  print.cc  print.hh  renumber.cc  renumber.hh  size_option.cc  size_option.hh  special.hh
native_client/kenlm/lm/common/test_data/: generate.sh  toy0.1  toy0.2  toy0.3  toy0.arpa  toy0.kenlm_intermediate  toy0.vocab  toy1.1  toy1.2  toy1.3  toy1.arpa  toy1.kenlm_intermediate  toy1.vocab
native_client/kenlm/lm/interpolate/: CMakeLists.txt  backoff_matrix.hh  backoff_reunification.cc  backoff_reunification.hh  backoff_reunification_test.cc  bounded_sequence_encoding.cc  bounded_sequence_encoding.hh  bounded_sequence_encoding_test.cc  interpolate_info.hh  interpolate_main.cc  merge_probabilities.cc  merge_probabilities.hh  merge_vocab.cc  merge_vocab.hh  merge_vocab_test.cc  normalize.cc  normalize.hh  normalize_test.cc  pipeline.cc  pipeline.hh  split_worker.cc  split_worker.hh  streaming_example_main.cc  tune_derivatives.cc  tune_derivatives.hh  tune_derivatives_test.cc  tune_instances.cc  tune_instances.hh  tune_instances_test.cc  tune_matrix.hh  tune_weights.cc  tune_weights.hh  universal_vocab.cc  universal_vocab.hh
native_client/kenlm/lm/interpolate/merge_test/: test1  test2  test3  test_bad_order  test_no_unk
native_client/kenlm/lm/wrappers/: README  nplm.cc  nplm.hh
native_client/kenlm/python/: _kenlm.pxd  example.py  kenlm.cpp  kenlm.pyx
native_client/kenlm/util/: CMakeLists.txt  bit_packing.cc  bit_packing.hh  bit_packing_test.cc  cat_compressed_main.cc  ersatz_progress.cc  ersatz_progress.hh  exception.cc  exception.hh  fake_ostream.hh  file.cc  file.hh  file_piece.cc  file_piece.hh  file_piece_test.cc  file_stream.hh  fixed_array.hh  float_to_string.cc  float_to_string.hh  getopt.c  getopt.hh  have.hh  integer_to_string.cc  integer_to_string.hh  integer_to_string_test.cc  joint_sort.hh  joint_sort_test.cc  mmap.cc  mmap.hh  multi_intersection.hh  multi_intersection_test.cc  murmur_hash.cc  murmur_hash.hh  parallel_read.cc  parallel_read.hh  pcqueue.hh  pcqueue_test.cc  pool.cc  pool.hh  probing_hash_table.hh  (+24 more)
native_client/kenlm/util/double-conversion/: CMakeLists.txt  bignum-dtoa.cc  bignum-dtoa.h  bignum.cc  bignum.h  cached-powers.cc  cached-powers.h  diy-fp.cc  diy-fp.h  double-conversion.cc  double-conversion.h  fast-dtoa.cc  fast-dtoa.h  fixed-dtoa.cc  fixed-dtoa.h  ieee.h  strtod.cc  strtod.h  utils.h
(+1760 files in other folders)
